--- a/src/template.html
+++ b/src/template.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <script src="./scripts/index.js" type="module"></script>
-    <title>Document</title>
+    <title>Restaurant Page</title>
 </head>
 <body>
-    
+    Hello, World!
 </body>
 </html>
