--- a/src/template.html
+++ b/src/template.html
@@ -7,6 +7,15 @@
     <title>Restaurant Page</title>
 </head>
 <body>
-    Hello, World!
+    <header>
+        <nav>
+            <div class="logo"><img src="./images/header-logo-cafe.webp" alt="Kirby Cafe"></div>
+            <div class="button" id="home">HOME</div>
+            <div class="button" id="menu">MENU</div>
+            <div class="button" id="about">ABOUT</div>
+        </nav>
+    </header>
+
+    <div id="content"></div>
 </body>
 </html>
