Completed Home tab

--- a/src/template.html
+++ b/src/template.html
@@ -9,13 +9,28 @@
 <body>
     <header>
         <nav>
-            <div class="logo"><img src="./images/header-logo-cafe.webp" alt="Kirby Cafe"></div>
-            <div class="button" id="home">HOME</div>
-            <div class="button" id="menu">MENU</div>
-            <div class="button" id="about">ABOUT</div>
+            <div class="logo">
+                <a href="https://kirbycafe.jp/cafe/">
+                    <img src="./images/header-logo-cafe.png" alt="Kirby Cafe">
+                </a>
+            </div>
+            <div class="button" id="home-button">HOME</div>
+            <div class="button" id="menu-button">MENU</div>
+            <div class="button" id="contact-button">CONTACT</div>
         </nav>
     </header>
 
-    <div id="content"></div>
+    <div class="content">
+        <div class="home-container">
+            <img class="home-logo-img" src="./images/logo-cafe.png">
+            <img class="home-guidance-img" src="./images/img-guidance-cafe.png">
+            <div class="home-about">
+                <div class="home-title">What is Kirby Cafe?</div>
+                <div class="home-description">
+                    Based on the concept of "What if there was a cafe in the world of Kirby?", the hard-working Waddle Dee, Kirby (who is in charge of snacking), and Chef Kawasaki's hospitality will fill everyone's stomachs and give them the energy of the stars!
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
