Completed Contact tab

--- a/src/template.html
+++ b/src/template.html
@@ -20,48 +20,6 @@
         </nav>
     </header>
 
-    <div class="content">
-        <div class="menu-container">
-            <div class="menu-category">
-                <div class="menu-category-title">FOODS</div>
-                <div class="menu-list">
-                    <div class="menu-item">
-                        <img src="./images/img-menu-food-01-01.png">
-                        <div class="menu-item-information">
-                            <div class="menu-item-name">The Great Car-Filled Gourmet Adventure Plate!</div>
-                            <div class="menu-item-description">
-                                Kirby's car-munching has become a gourmet one-plate menu! A sandwich shaped like a Warp Star, with roast beef and garlic
-                                shrimp. With Waddle Dee and Elfilin on board, he's ready for a big adventure! Fill up your stomach and race through the
-                                New World!
-                            </div>
-                        </div>
-                    </div>
-                    <div class="menu-item">
-                        <img src="./images/img-menu-food-05-01.png">
-                        <div class="menu-item-information">
-                            <div class="menu-item-name">Waddle Dee's Nap Omelette Rice</div>
-                            <div class="menu-item-description">
-                                This omelet rice features a Waddle Dee napping peacefully on a bed of runny eggs and plenty of homemade sauce. Please
-                                eat it gently so as to not wake him up!
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    <div class="content"></div>
 </body>
 </html>
-<!-- 
-MENU
-Foods
-Great Adventure! Car-Filled Gourmet Plate 01-01
-Waddle Dee's Nap Omelette Rice 05-01
-
-Drinks
-Orange Ocean 02-01
-Kirby's Exciting Marshmallow O'Late 03-01
-
-Desserts
-Kirby's Fluffy Pancakes 04-01
-Waddle Dee's Search 02-01 -->
